new website, again

--- a/index.html
+++ b/index.html
@@ -5,193 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <title>Derek Torsani</title>
 </head>
 
 <body>
 
-<div class="container">
+<div class="side">
+    <div class="nav">
+        <a class="mr-16" id="tw" href="https://twitter.com/dmtors" target="_blank"></a>
+        <a class="mr-16" id="dr" href="https://dribbble.com/dmtors" target="_blank"></a>
+        <a class="mr-16" id="md" href="https://medium.com/@dmtors" target="_blank"></a>
+        <a class="mr-16" id="un" href="https://unsplash.com/@dmtors" target="_blank"></a>
+        <a class="mr-16" id="vi" href="https://vimeo.com/dmtors" target="_blank"></a>
+        <a class="mr-16" id="sc" href="https://soundcloud.com/sequoiadc" target="_blank"></a>
+        <a class="mr-16" id="ig" href="https://instagram.com/derektorsani" target="_blank"></a>
+    </div>
+    <div class="title">
+        <h1>Derek Torsani</h1>
+        <p>— an Android slinging, bass string strumming, hip hop humming, hobby hording designer.</p>
+    </div>
+    <a class="contact" href="mailto:derektorsani@gmail.com" target="_blank"><div>
+        <h6>Let's Talk</h6>
+    </div></a>
+</div>
 
-    <p class="bold">Derek Torsani</p>
-    </br></br>
-    <h6><span>Contact</span></h6>
-    <p class="">📬 derektorsani@gmail.com</p>
-    <p class="">🌎 @dmtors</p>
-    </br></br>
+<div class="images">
+    <img class="imgA" src="images/637.gif" alt="A filmic, grainy ink-like substance animating on and off the screen."/>
+    <img class="imgB" src="images/android.gif" alt="The Android Marshmallow boot animation. A series of colorful shapes forming and morphing into and out of one another."/>
+</div>
 
-    <h6><span>Education</span></h6>
-    <p><span class="bold">Bachelor of Fine Arts</span>, Graphic Design, MICA <span class="grey">/</span> <a href="https://www.mica.edu/" target="_blank">mica.edu</a></p>
-    <span>2008 — 2011 / Baltimore, MD</span>
-    </br></br></br>
-
-    <h6><span>Trade</span></h6>
-    <p><span class="bold">Oracle</span>, Senior Product Designer <span class="grey">/</span> <a href="https://www.oracle.com/" target="_blank">oracle.com</a></p>
-    <span>2018 — PRESENT / Remote</span>
-    </br></br>
-    <a href="derektorsani-resume-2018.pdf">Full Resume</a>
-    </br></br></br>
-
-    <h6><span>Projects</span></h6>
-    <p><span class="bold">Signals Mobile Design System</span> <span class="grey">/</span> <a href="https://www.alarm.com/" target="_blank">alarm.com</a></p>
-    <span>2018</span>
-    </br></br>
-    <p><span class="bold">SamCart eCommerce Web App</span>, Lead Designer <span class="grey">/</span> <a href="https://www.samcart.com/" target="_blank">samcart.com</a></p>
-    <span>2016 — 2017</span>
-    </br></br>
-    <p><span class="bold">Halfdollar Budgeting Tools</span> <span class="grey">/</span> <a href="http://halfdollar.org" target="_blank">halfdollar.org</a></p>
-    <span>2015 — PRESENT</span>
-    </br></br>
-    <p><span class="bold">Weiigh</span> <span class="grey">/</span> <a href="http://weiigh.com" target="_blank">weiigh.com</a></p>
-    <span>2017 — PRESENT</span>
-    </br></br>
-    <p><span class="bold">FriendsAnonymous</span> <span class="grey">/</span> <a href="http://friendsanonymo.us" target="_blank">friendsanonymo.us</a></p>
-    <span>2017 — PRESENT</span>
-    </br></br>
-    <p><span class="bold">Grey Area</span> <span class="grey">/</span> <a href="http://heygreyarea.com" target="_blank">heygreyarea.com</a></p>
-    <span>2018 — PRESENT</span>
-    </br></br>
-    <a href="mailto:derektorsani@gmail.com subject=Portfolio Examples Request" target="_blank">Portfolio Examples Available Upon Request</a>
-    </br></br></br>
-
-    <h6><span>Experiments</span></h6>
-    <p><span class="bold">Automatic Content Translation</span> <span class="grey">/ In Progress</span></p>
-    <span>PRESENT</span>
-    </br></br>
-    <p><span class="bold">100 Days of Animated Design Prompts</span> <span class="grey">/</span> <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Article</a> <span class="grey">/</span> <a href="https://dribbble.com/dmtors/projects/319430-Daily-UI" target="_blank">Project</a></p>
-    <span>2016</span>
-    </br></br>
-    <p><span class="bold">Google Design Explorations</span> <span class="grey">/</span> <a href="https://blog.prototypr.io/google-design-explorations-f398591e8ccf" target="_blank">Article</a></p>
-    <span>2016</span>
-    </br></br>
-    <p><span class="bold">Looping Logos</span> <span class="grey">/</span> <a href="https://dribbble.com/dmtors/projects/338960-Looping-Logos" target="_blank">Project</a></p>
-    <span>2015</span>
-    </br></br>
-    <p><span class="bold">The Show/Hide Eyeball</span> <span class="grey">/</span> <a href="https://blog.prototypr.io/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank">Article</a></p>
-    <span>2015</span>
-    </br></br>
-    <p><span class="bold">Sandals Resorts App</span> <span class="grey">/</span> <a href="https://medium.com/@dmtors/sandals-resorts-app-def86054ab23" target="_blank">Case Study</a></p>
-    <span>2015</span>
-    </br></br></br>
-
-    <h6><span>Hobbies</span></h6>
-    <p>🎶 <span class="bold">Music</span> <span class="grey">/</span> <a href="https://www.soundcloud.com/sequoiadc" target="_blank">SoundCloud</a></p>
-    <p>📷 <span class="bold">Photography</span> <span class="grey">/</span> <a href="https://www.unsplash.com/@dmtors" target="_blank">Unsplash</a></p>
-    <p>🎥 <span class="bold">Filmmaking</span> <span class="grey">/</span> <a href="https://www.vimeo.com/dmtors" target="_blank">Vimeo</a></p>
-    <p>📝 <span class="bold">Writing</span> <span class="grey">/</span> <a href="https://www.medium.com/@dmtors" target="_blank">Medium</a></p>
-    </br></br></br>
-
-    <h6><span>Biography</span></h6>
-    <p>Sleeping to 8am is considered sleeping in for me. I like to get an early and productive start to my day. I also enjoy going out at night, either to see a show, go dancing, or to be active outside.</p>
-    </br>
-    <p>My diet consists of mostly vegetables and legumes. It's just what works best for my body.</p>
-    </br>
-    <p>I take care of my self; my body, my mind, and my soul.</p>
-    </br>
-    <p>I'm not big on the gym, but I workout daily, ride my bike, skateboard, and play ice hockey.</p>
-    </br>
-    <p>I don't spend much time on social media. I don't like seeking attention.</p>
-    </br>
-    <p>The books I read are usually about the balance between humanity and nature through environmental science, human rights, and personal enlightenment.</p>
-    </br>
-    <p>I play a variety of instruments including drums, bass, and guitar. I also produce music, and am definitely my toughest critic.</p>
-    </br>
-    <p>My relationship with God is a personal and ever evolving one.</p>
-    </br>
-    <p>My M.O. is to love people for who they are, serve others and spread kindness, and always value the education and understanding of people different than myself.</p>
-    </br>
-    <p>I'm close with my family, but I also thrive off some distance and alone time. I enjoy traveling to new and old places, meeting new people, and having meaningful and sometimes uncomfortable conversations typically following the maieutic approach. It's okay to disagree, but important to accept. That's the beauty in individuality.</p>
-    </br>
-    <p>I keep my mental and physical spaces tidy and organized. It helps my mind to not be strangled and gives me the ability to think more freely. I don't like having many objects. There are some material things I love to have which feed and spark my creativity, but I don't need much.</p>
-    </br>
-    <p>I don't feel the world or anyone owes me anything. I also don't like owing anyone anything. If I tell you I'm going to do something, I'm going to do everything I can to do it.</p>
-    </br>
-    <p>Financial stability is important to me, and I'm a frugal fellow, but I also enjoy splurging on a good experience and donating to anyone doing something impactful and meaningful with their resources.</p>
-    </br>
-    <p>I collect unique coins and paper currency, but I must either find or be gifted them. I thoroughly enjoy untangling things, such as necklaces and cables. I stared death in the face when I was five months old, but I believe I was kept here for something much larger than myself.</p>
-    </br>
-    <p>Altruism plays an important role in my career. I've found that I need to spend my day-to-day making positive and meaningful impact with a team of genuine people. Working a flexible schedule remotely has proven to nourish my most productive self. I am most motivated when I can focus in my own space, on my own time, and with the ability to travel and live my personal life to the fullest. In this environment, I am able to be loyal, dedicated, and have the strong work ethic that I have learned from my entrepreneurial family.</p>
-    </br>
-    <p>Discipline and determination help me accomplish my goals, of which I make a lot. There's too much to gain in this life to pass on opportunity. Sometimes you have to push through the heat to get to the sun. I try not to fret on the things of the past or the things of which I do not have control over, and I always try to learn from my experiences. Onward and upward.</p>
-    </br></br></br>
-
-    <!-- <h6><span>Currently Studying on <a class="bold" href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></span></h6>
-    <p class="bold">🥧 Mathematics</p>
-    <p class="bold">⚡️ Physics</p>
-    <p class="bold">🔬 Chemistry</p>
-    <p class="bold">🌲 Biology</p>
-    </br></br></br>
-
-    <h6><span>Currently Learning on <a class="bold" href="https://www.duolingo.com/" target="_blank">Duolingo</a></span></h6>
-    <p class="bold">🇮🇹 Italian</p>
-    <p class="bold">🇪🇸 Spanish</p>
-    <p class="bold">🇵🇹 Portuguese</p>
-    <p class="bold">🇫🇷 French</p>
-    </br></br></br> -->
-
-    <h6><span>Reading Queue</span></h6>
-    <s><a class="grey" href="https://www.amazon.com/Crazy-Love-Overwhelmed-Relentless-God/dp/1434705943" target="_blank">Crazy Love by Francis Chan</a></s>
-    </br>
-    <s><a class="grey" href="https://www.amazon.com/Forgotten-God-Reversing-Tragic-Neglect/dp/1434767957" target="_blank">Forgotten God by Francis Chan</a></s>
-    </br>
-    <s><a class="grey" href="https://www.amazon.com/Circle-Maker-Praying-Circles-Greatest/dp/1491511370" target="_blank">The Circle Maker by Mark Batterson</a></s>
-    </br>
-    <s><a class="grey" href="https://www.amazon.com/Silent-Spring-Rachel-Carson/dp/0618249060" target="_blank">Silent Spring by Rachel Carson</a></s>
-    </br>
-    <a href="https://www.amazon.com/Lab-Girl-Hope-Jahren/dp/1101873728/" target="_blank">Lab Girl by Hope Jahren</a>
-    </br>
-    <a href="https://www.amazon.com/Sophist-Hackett-Classics-Plato/dp/087220202X/" target="_blank">Sophist by Plato</a>
-    </br>
-    <a href="https://www.amazon.com/Three-Cups-Tea-Mission-Promote/dp/0143038257/" target="_blank">Three Cups of Tea by Greg Mortenson</a>
-    </br>
-    <a href="https://www.amazon.com/World-Without-Us-Alan-Weisman/dp/0312427905" target="_blank">The World Without Us by Alan Weisman</a>
-    </br>
-    <a href="https://www.amazon.com/What-Eyes-Dont-See-Resistance/dp/0399590838" target="_blank">What The Eyes Don't See by Mona Hanna-Attisha</a>
-    </br>
-    <a href="https://www.amazon.com/Ishmael-Novel-Daniel-Quinn/dp/0553375407" target="_blank">Ishmael by Daniel Quinn</a>
-    </br>
-    <a href="https://www.amazon.com/My-Ishmael-Daniel-Quinn/dp/0553379658/" target="_blank">My Ishmael by Daniel Quinn</a>
-    </br>
-    <a href="https://www.amazon.com/Story-B-Ishmael-Daniel-Quinn/dp/0553379011/" target="_blank">The Story of B by Daniel Quinn</a>
-    </br>
-    <a href="https://www.amazon.com/Tupac-Shakur-Vibe-Magazine/dp/0609802178" target="_blank">Tupac Shakur by Vibe Magazine</a>
-    </br>
-    <a href="https://www.amazon.com/Between-World-Me-Ta-Nehisi-Coates/dp/0451482212" target="_blank">Between The World And Me by Ta-Nehisi Coates</a>
-    </br>
-    <a href="https://www.amazon.com/Other-Side-Freedom-Case-Hope/dp/0525560327" target="_blank">On The Other Side Of Freedom by DeRay Mckesson</a>
-    </br>
-    <a href="https://www.amazon.com/Not-My-Neighborhood-Bigotry-American/dp/1566638437" target="_blank">Not In My Neighborhood by Antero Pietila</a>
-    </br>
-    <a href="https://www.amazon.com/Human-Nature-new-Preface-Revised/dp/0674016386" target="_blank">On Human Nature by Edward O. Wilson</a>
-    </br>
-    <a href="https://www.amazon.com/gp/product/0800636856/ref=ox_sc_sfl_title_16?ie=UTF8&psc=1&smid=AMM7ESLB3M5P5" target="_blank">I Have A Dream by James Echols</a>
-    </br>
-    <a href="https://www.amazon.com/New-Jim-Crow-Incarceration-Colorblindness/dp/1595586431" target="_blank">The New Jim Crow by Michelle Alexander</a>
-    </br>
-    <a href="https://www.amazon.com/March-Trilogy-Slipcase-John-Lewis/dp/1603093958" target="_blank">March by John Lewis</a>
-    </br>
-    <a href="https://www.amazon.com/Human-Nature-new-Preface-Revised/dp/0674016386" target="_blank">On Human Nature by Edward O. Wilson</a>
-    </br>
-    <a href="https://www.amazon.com/Carolina-Skeletons-Execution-Americas-Youngest/dp/089296264X" target="_blank">Carolina Skeletons by David Stout</a>
-    </br>
-    <a href="https://www.amazon.com/Gregory-Maguire-Wicked-Thirty-second-Printing/dp/B00N4JN9WA/" target="_blank">Wicked by Gregory Maguire</a>
-    </br>
-    <a href="https://www.amazon.com/Jesus-Land-Memoir-Julia-Scheeres/dp/1619020653" target="_blank">Jesus Land by Julia Scheeres</a>
-    </br></br>
-    <p class="grey">📚 Please reach out if you have any book recommendations. :)</p>
-    </br></br></br>
-
-    <h6><span>Links</span></h6>
-    <p>👵🏼 <a href="https://instagram.com/derektorsani" target="_blank">Instagram</a></p>
-    <p>🐦 <a href="https://twitter.com/dmtors" target="_blank">Twitter</a></p>
-    <p>🏀 <a href="https://dribbble.com/dmtors" target="_blank">Dribbble</a></p>
-    <p>🖋 <a href="https://codepen.io/dmtors" target="_blank">CodePen</a></p>
-    <p>🐈 <a href="https://github.com/dmtors" target="_blank">GitHub</a></p>
-    </br></br></br>
-
-    <img style="width:100%; border-radius:5px;" src="dmtors.gif" alt="Young white boy dancing to 'I Missed The Bus' by Kris Kross in 1993 dressed in a hand made Maryland Terrapins vest and matching backwards cap."/>
-    </br></br></br>
-
+<div class="main">
+    <div class="content">
+        <h1>Design is an opportunity.</h1>
+        <p>An avenue of global change. A form of interlingual communication, similar to the sounds of music. The way we understand one another and open pathways of inclusivity. It brings access of familiarity to individuals unfamiliar with accessibility. Design enables the choice to be heard.</p>
+        <p>This is why I create in many mediums, as a way to build character through comprehension and consideration.</p>
+    </div>
+    <div class="logos">
+    </div>
+    <div class="content">
+        <p>In the past seven years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, prototyping interfaces, and building cohesively elaborate design systems.</p>
+        <p>Currently I am a Senior Product Designer at <a href="https://oracle.com" target="_blank">Oracle</a>.</p>
+        <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to <a href="http://weiigh.com" target="_blank">help make decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
+        <p>As a wannabe scientist, I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
+        <p><span>A.</span> <a href="" target="_blank">Autra</a> — how can we encourage better communication between diverse parties in technology?</p>
+        <p><span>B.</span> <a href="" target="_blank">System Fonts</a> — structurely, how dissimilar are the four major operating system native fonts?</p>
+        <p><span>C.</span> <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Daily UI</a> — can I animate a different interactive design prompt every day for 100 days straight?</p>
+        <p><span>D.</span> <a href="https://blog.prototypr.io/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank">Seeing Into the Future</a> — what is the future of the menu icon, or the lack thereof?</p>
+        <p>I’m a strong believer in staying sharp, self-wellness, and growth. There are a few ways I do this for myself:</p>
+        <p>• Read on the regular (<a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">current reading queue</a>)</p>
+        <p>• Learn new languages (<a href="https://www.duolingo.com/" target="_blank">currently Spanish & Italian</a>)</p>
+        <p>• Refine academic knowledge (<a href="https://www.khanacademy.org/" target="_blank">currently Mathematics</a>)</p>
+        <p>Seldom do we judge people based on their character but what we see, hear, and assume. Get to know me, I’d be happy to talk with you. :)</p>
+        </br></br>
+    </div>
 </div>
 
 </body>
