--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         <p>This is why I create in many mediums, as a way to build character through comprehension and consideration.</p>
     </div>
     <div class="logos">
+        <img class="logo" style="" src="images/oracle.svg" alt="The Oracle logo."/>
+        <img class="logo" style="" src="images/alarm.svg" alt="The Alarm.com logo."/>
+        <img class="logo" style="" src="images/samcart.svg" alt="The SamCart logo."/>
+        <img class="logo" style="" src="images/brllnt.svg" alt="The Brllnt logo."/>
+        <img class="logo" style="" src="images/sandals.svg" alt="The Sandals logo."/>
+        <img class="logo" style="" src="images/522.svg" alt="The 522 Productions logo."/>
+        <img class="logo" style="" src="images/mica.svg" alt="The Maryland Institute College of Art logo."/>
     </div>
     <div class="content">
         <p>In the past seven years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, prototyping interfaces, and building cohesively elaborate design systems.</p>
