--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="content">
         <p>In the past seven years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, prototyping interfaces, and building cohesively elaborate design systems.</p>
         <p>Currently I am a Senior Product Designer at <a href="https://oracle.com" target="_blank">Oracle</a>.</p>
-        <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to <a href="http://weiigh.com" target="_blank">help make decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
+        <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to help <a href="http://weiigh.com" target="_blank">make calculated decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
         <p>As a wannabe scientist, I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
         <p><span>A.</span> <a href="" target="_blank">Autra</a> — how can we encourage better communication between diverse parties in technology?</p>
         <p><span>B.</span> <a href="https://dribbble.com/shots/5387327-System-Font-Structure-Experiment" target="_blank">System Fonts</a> — structurally, how dissimilar are the four major operating system native fonts?</p>
@@ -64,7 +64,7 @@
         <p>• Read on the regular (<a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">current reading queue</a>)</p>
         <p>• Learn new languages (<a href="https://www.duolingo.com/" target="_blank">currently Spanish & Italian</a>)</p>
         <p>• Refine academic knowledge (<a href="https://www.khanacademy.org/" target="_blank">currently Mathematics</a>)</p>
-        <p>Seldom do we judge people based on their character but what we see, hear, and assume. Get to know me, I’d be happy to talk with you. :)</p>
+        <p>Seldom do we judge people based on their character but what we see, hear, and assume. Get to know one another. Spread love and kindness. :)</p>
         </br></br>
     </div>
 </div>
