--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="title">
         <h1>Derek Torsani</h1>
-        <p>— an Android slinging, bass string strumming, hip hop humming, hobby hording designer.</p>
+        <p>— an Android slinging, bass string strumming, hip hop humming, hobby hoarding designer.</p>
     </div>
     <a class="contact" href="mailto:derektorsani@gmail.com" target="_blank"><div>
         <h6>Let's Talk</h6>
@@ -55,7 +55,7 @@
         <p>In the past seven years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, prototyping interfaces, and building cohesively elaborate design systems.</p>
         <p>Currently I am a Senior Product Designer at <a href="https://oracle.com" target="_blank">Oracle</a>.</p>
         <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to help <a href="http://weiigh.com" target="_blank">make calculated decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
-        <p>As a wannabe scientist, I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
+        <p>I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
         <p><span>A.</span> <a href="" target="_blank">Autra</a> — how can we encourage better communication between diverse parties in technology?</p>
         <p><span>B.</span> <a href="https://dribbble.com/shots/5387327-System-Font-Structure-Experiment" target="_blank">System Fonts</a> — structurally, how dissimilar are the four major operating system native fonts?</p>
         <p><span>C.</span> <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Daily UI</a> — can I animate a different interactive design prompt every day for 100 days straight?</p>
