--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
         <p>Currently I am a Senior Product Designer at <a href="https://oracle.com" target="_blank">Oracle</a>.</p>
         <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to help <a href="http://weiigh.com" target="_blank">make calculated decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
         <p>I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
-        <p><span>A.</span> <a href="" target="_blank">Autra</a> — how can we encourage better communication between diverse parties in technology?</p>
+        <p><span>A.</span> <a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" target="_blank">Autra</a> — how can we encourage better communication between diverse parties using technology?</p>
         <p><span>B.</span> <a href="https://dribbble.com/shots/5387327-System-Font-Structure-Experiment" target="_blank">System Fonts</a> — structurally, how dissimilar are the four major operating system native fonts?</p>
         <p><span>C.</span> <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Daily UI</a> — can I animate a different interactive design prompt every day for 100 days straight?</p>
         <p><span>D.</span> <a href="https://blog.prototypr.io/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank">Seeing Into the Future</a> — what is the future of the menu icon, or the lack thereof?</p>
         <p>I’m a strong believer in staying sharp, self-wellness, and growth. There are a few ways I do this for myself:</p>
-        <p>• Read on the regular (<a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">current reading queue</a>)</p>
-        <p>• Learn new languages (<a href="https://www.duolingo.com/" target="_blank">currently Spanish & Italian</a>)</p>
-        <p>• Refine academic knowledge (<a href="https://www.khanacademy.org/" target="_blank">currently Mathematics</a>)</p>
+        <p>• <a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">Read on the regular</a></p>
+        <p>• <a href="https://www.duolingo.com/" target="_blank">Learn new languages</a></p>
+        <p>• Practice music theory and playing bass</p>
+        <p>• <a href="https://www.khanacademy.org/" target="_blank">Refine academic knowledge <a href="https://www.khanacademy.org/" target="_blank"></a></p>
         <p>Seldom do we judge people based on their character but what we see, hear, and assume. Get to know one another. Spread love and kindness. :)</p>
         </br></br>
     </div>
