--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <img class="logo" style="" src="images/mica.svg" alt="The Maryland Institute College of Art logo."/>
     </div>
     <div class="content">
-        <p>In the past eight years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, and prototyping interfaces using both software like InVision and simple HTML/CSS. For the past two years, I've been focused on building cohesively elaborate design systems for distributed teams. While this may come with great challenges, to me there is no reward greater than seeing people work together better in more consistent, efficient, and communicative bounds.</p>
-        <p>Currently I am a Senior Product Designer at <a href="https://oracle.com" target="_blank">Oracle</a> working on data cloud products and managing the design system.</p>
+        <p>In the past eight years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, and prototyping interfaces.</p>
+        <p>For the past two years, I've been focused on building cohesively elaborate design systems for distributed teams at companies like <a href="https://oracle.com" target="_blank">Oracle</a> and <a href="https://alarm.com" target="_blank">Alarm.com</a>. While this may come with great challenges, to me there is no reward greater than enabling people to work together more consistently, efficiently, and in stronger communicative bounds.</p>
         <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to help <a href="http://weiigh.com" target="_blank">make calculated decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
         <p>I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
         <p>• <a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" target="_blank">Autra</a> — how can we encourage better communication between diverse parties using technology?</p>
@@ -61,10 +61,10 @@
         <p>• <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Daily UI</a> — can I animate a different interactive design prompt every day for 100 days straight?</p>
         <p>• <a href="https://blog.prototypr.io/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank">Seeing Into the Future</a> — what is the future of the menu icon, or the lack thereof?</p>
         <p>I’m a strong believer in staying sharp, self-wellness, and growth. There are a few ways I do this for myself:</p>
-        <p>• <a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">Currently reading Three Cups of Tea</a></p>
-        <p>• <a href="https://www.duolingo.com/" target="_blank">Currently learning Spanish</a></p>
+        <p>• <a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">Working through my book queue</a></p>
+        <p>• <a href="https://www.duolingo.com/" target="_blank">Learning new languages</a></p>
         <p>• <a href="https://www.headspace.com/" target="_blank">Getting in the right headspace through meditation</a></p>
-        <p>• <a href="https://www.yogadistrict.com/" target="_blank">Finding balnce with practicing yoga</a></p>
+        <p>• <a href="https://www.yogadistrict.com/" target="_blank">Finding balance with practicing yoga</a></p>
         <p>Seldom do we judge people based on their character but what we see, hear, and assume. Get to know one another. Spread love and kindness. :)</p>
         </br></br>
     </div>
